--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,15 @@
-.venv/
-
+venv/
+__blobstorage__/
 *.pyc
 __pycache__/
-
+migrations/
 instance/
-
 .env
-
 .pytest_cache/
 .coverage
 htmlcov/
-
 dist/
 build/
-*.egg-info/
+*.egg-info
+__azurite_db_table*
+__azurite_db_blob*
